(copy_files ../shared/feed.ml{,i})

(library
 (name feed_native)
 (modules feed)
 (wrapped false)
 (preprocess
  (pps ppx_deriving_yojson))
 (melange.compile_flags :standard -w -101 -nopervasives))

(executable
 (name lambda)
 (modules :standard \ feed)
 (libraries
  lambda-runtime
  vercel
  piaf
  logs.fmt
  fmt.tty
  uri
  syndic
  lambdasoup
  feed_native)
 (preprocess
  (pps ppx_deriving_yojson)))

(env
 (static
  (flags
   (:standard -ccopt -static))
  (ocamlopt_flags
   (:standard -O3 -unbox-closures))))
