(rule
 (target feed.ml)
 (action
  (copy ../shared/feed_shared.ml %{target})))

(library
 (name feed_mel)
 (modes melange)
 (modules feed)
 (implements feed)
 (melange.compile_flags :standard -w -101 -nopervasives))

(melange.emit
 (target dist)
 (module_systems
  (es6 bs.js))
 (alias melange)
 (entries :standard \ feed)
 (compile_flags :standard -bs-jsx 3 -w -9)
 (libraries melange feed_mel promise bs_fetch decoders_bs reason_react)
 (runtime_deps
  serviceWorker.js
  (glob_files *.scss)
  (glob_files *.svg)))
